fix broken styles

--- a/public/src/App.css
+++ b/public/src/App.css
@@ -2,6 +2,7 @@
 *:before,
 *:after {
   box-sizing: border-box;
+  position: relative;
 }
 
 html,
@@ -14,4 +15,9 @@ body {
 
 #root {
   height: 100%;
+}
+
+/* Having position:relative on *,*:before,*:after breaks monaco tooltip positioning. we need to reset it */
+.overflowingContentWidgets {
+  position: initial;
 }
